# cxx-class

./: .gitignore  README.md
asio/: CMakeLists.txt  async_udp_echo_server.cpp  drone.cpp  drone.sh  gps.proto  gpsreader.h  jetyak.cpp  jetyak.sh  note-on-shell-scripts.txt  server.cpp  server.h  topside.sh  udp.proto
asio/gpsMOOS/: CMakeLists.txt  COPYING  ping_edison_catalina.sh  ping_edison_office.sh  ping_jetyak_office.sh  ping_topside_office.sh
asio/gpsMOOS/missions/: ctd.moos  drone.moos  gps.moos  jetyak.moos  packagertest1.moos  packagertest4.moos  server.moos  topside.moos
asio/gpsMOOS/missions/oldmultihop/: topside.moos
asio/gpsMOOS/missions/packagertests/: packagertest2.moos  packagertest3.moos
asio/gpsMOOS/missions/unpackager_multihop/: drone.moos  jetyak.moos  topside.moos
asio/gpsMOOS/plugs/jetyak_plugs/: #iUDPServer.plug#  iUDPServer.plug  pUnpackager.plug
asio/gpsMOOS/plugs/topside_plugs/: iUDPServer.plug  pPackager.plug
asio/gpsMOOS/src/messages/: CMakeLists.txt  ctd.proto  gps.proto  udp.proto
asio/gpsMOOS/src/moos/: CMakeLists.txt  iUDPServer_jetyak_20170804T213423.txt  iUDPServer_jetyak_20170804T213728.txt
asio/gpsMOOS/src/moos/iCTDSimple/: CMakeLists.txt  iCTDSimple.cpp  iCTDSimple.h
asio/gpsMOOS/src/moos/iGPS/: iGPS.cpp  iGPS.h  iGPS_backup.h  iGPS_config.proto
asio/gpsMOOS/src/moos/iServer/: CMakeLists.txt  iServer.cpp  iServer.h  iServer_AdaptedToCMakeButNotYetMOOSAppBackup.cpp  iServer_config.proto
asio/gpsMOOS/src/moos/iUDPDroneReceiver/: CMakeLists.txt  iUDPDroneReceiver.cpp  iUDPDroneReceiver_config.proto
asio/gpsMOOS/src/moos/iUDPDroneSender/: CMakeLists.txt  iUDPDroneSender.cpp  iUDPDroneSender.h  iUDPDroneSender_config.proto
asio/gpsMOOS/src/moos/iUDPServer/: iUDPServer.cpp  iUDPServer.h  iUDPServer_config.proto
asio/gpsMOOS/src/moos/pCTDDisplayer/: CMakeLists.txt
asio/gpsMOOS/src/moos/pGPSDisplayer/: pGPSDisplayer.cpp  pGPSDisplayer.h  pGPSDisplayer_config.proto
asio/gpsMOOS/src/moos/pGobyMOOSAppTemplate/: CMakeLists.txt
asio/gpsMOOS/src/moos/pLAMSSCatcher/: CMakeLists.txt  pLAMSSCatcher.cpp  pLAMSSCatcher.h  pLAMSSCatcher_config.proto
asio/gpsMOOS/src/moos/pPackager/: CMakeLists.txt  pPackager.cpp  pPackager.h  pPackager_config.proto
asio/gpsMOOS/src/moos/pUnpackager/: CMakeLists.txt  pUnpackager.cpp  pUnpackager.h  pUnpackager_config.proto
asio/server/: build.sh  launch.sh  ping_jetyak_office.sh  ping_topside_office.sh
asio/server/missions/: drone.moos  test.moos
asio/server/src/messages/: CMakeLists.txt
asio/server/src/moos/: CMakeLists.txt
asio/server/src/moos/iStartup/: iUDPServer.cpp  iUDPServer.h
asio/server/src/moos/iUDPDroneReceiver/: iUDPDroneReceiver.cpp  iUDPDroneReceiver.h  iUDPDroneReceiver_config.proto  iUDPDroneReceiver_with_debugs.cpp
asio/server/src/moos/iUDPDroneSender/: iUDPDroneSender.cpp  iUDPDroneSender_config.proto  iUDPDroneSender_with_debugs.cpp
asio/server/src/moos/iUDPServer/: CMakeLists.txt  iUDPServer.cpp  iUDPServer_config.proto
asio/server/src/moos/pPackager/: CMakeLists.txt  pPackager.cpp  pPackager.h  pPackager_config.proto
assignment1/: assignment1-gps-parser.txt  gps.cpp  helpers-usage.cpp  helpers.h  input.gps  split-usage.cpp  split.h
assignment1/toby/: gps-parser  gps-parser.cpp
assignment2/: Makefile  assignment2-gps-parser-continued.txt  gps.cpp  gps.h  gps.proto
assignment2/toby/: CMakeLists.txt  gps-parser.cpp  gps.proto  gpssentence.cpp  gpssentence.h  helpers.h
assignment3/: assignment3-gps-parser-moos-app.txt
assignment3/gpsMOOS/missions/: gps.moos
assignment3/gpsMOOS/src/: CMakeLists.txt
assignment3/gpsMOOS/src/messages/: CMakeLists.txt  gps.proto
assignment3/gpsMOOS/src/moos/: CMakeLists.txt
assignment3/gpsMOOS/src/moos/iCTDSimple/: iCTDSimple_config.proto
assignment3/gpsMOOS/src/moos/iGPS/: CMakeLists.txt  gps.cpp  gps.h  iGPS_backup.cpp  iGPS_config.proto
assignment3/gpsMOOS/src/moos/pCTDDisplayer/: pCTDDisplayer.cpp  pCTDDisplayer.h  pCTDDisplayer_config.proto
assignment3/gpsMOOS/src/moos/pGPSDisplayer/: CMakeLists.txt  pGPSDisplayer.cpp  pGPSDisplayer.h
lamss/: lamss-overview.txt
lesson1/: ctd-sim.py  lesson1-overview.txt
lesson1/ctd-driver/: CMakeLists.txt  ctd.cpp
lesson1/hello1/: hello.cpp
lesson1/hello2/: hello.h  makefile
lesson1/hello2-cmake/: CMakeLists.txt  hello.cpp  main.cpp
lesson2/: lesson2-overview.txt
lesson2/ctd-gpb/: CMakeLists.txt  ctd.cpp
lesson2/shapes/: rect.cpp  shapes  shapes.cpp  shapes.h  triangle.cpp
lesson3/: lesson3-overview.txt
lesson3/shapes/: main.cpp  shapes  shapes.h
